# detchar

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
data/: file_list.txt
src/: main.rs
