[package]
name = "detchar"
version = "0.1.0"
edition = "2021"
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "Command line tool for detecting file encodings"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "0.1"
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0"

[features]
multithreading = ["chardetng/multithreading"]
