[package]
name = "detchar"
version = "0.1.1-alpha.0"
edition = "2021"
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "Command line tool for detecting file encodings"
keywords = ["text", "encoding"]
categories = ["command-line-interface", "text-processing", "encoding"]
repository = "https://github.com/clbarnes/detchar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cargo-release = "0.20"

[dependencies]
chardetng = "0.1"
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0"

[features]
multithreading = ["chardetng/multithreading"]
